add link to download

--- a/tutorial/html/index.html
+++ b/tutorial/html/index.html
@@ -245,6 +245,7 @@ For detailed technical information and manual pages, please refer to the package
 <a href="http://berndbischl.github.io/mlr/man/">manual pages</a>.
 They are regularly updated and reflect the documentation of the
 <a href="http://cran.r-project.org/web/packages/mlr/index.html">current package version on CRAN</a>.</p>
+<p>An offline version of this of this tutorial is available to <a href="http://berndbischl.github.io/mlr/tutorial/mlr_tutorial.zip">download here</a>.</p>
 <p>The tutorial explains the basic analysis of a data set step by step:</p>
 <ul>
 <li>What is your data and the aim of your analysis? <a href="task/index.html">Tasks</a></li>
