--- a/tutorial/html/filter_methods/index.html
+++ b/tutorial/html/filter_methods/index.html
@@ -256,7 +256,7 @@ numeric features.</p>
 <tbody>
 <tr>
 <td align="left">anova.test</td>
-<td align="left"></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages//"></a></td>
 <td align="left">ANOVA Test for binary and multiclass classification tasks</td>
 <td align="center">X</td>
 <td align="center"></td>
@@ -306,7 +306,7 @@ numeric features.</p>
 </tr>
 <tr>
 <td align="left">kruskal.test</td>
-<td align="left"></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages//"></a></td>
 <td align="left">Kurskal Test for binary and multiclass classification tasks</td>
 <td align="center">X</td>
 <td align="center"></td>
@@ -396,7 +396,7 @@ numeric features.</p>
 </tr>
 <tr>
 <td align="left">univariate</td>
-<td align="left"></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages//"></a></td>
 <td align="left">Construct a simple performance filter using a mlr learner</td>
 <td align="center">X</td>
 <td align="center">X</td>
@@ -406,7 +406,7 @@ numeric features.</p>
 </tr>
 <tr>
 <td align="left">variance</td>
-<td align="left"></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages//"></a></td>
 <td align="left">A simple variance filter</td>
 <td align="center">X</td>
 <td align="center">X</td>
