--- a/tutorial/html/cost_sensitive_classif/index.html
+++ b/tutorial/html/cost_sensitive_classif/index.html
@@ -863,10 +863,8 @@ mod
 </code></pre>
 
 <p>The models corresponding to the individual pairs can be accessed by function
-<a href="http://www.rdocumentation.org/packages/mlr/functions/getCostSensWeightedPairsModels.html">getCostSensWeightedPairsModels</a>.
-Similar accessor functions (<a href="http://www.rdocumentation.org/packages/mlr/functions/getCostSensClassifModel.html">getCostSensClassifModel</a> and <a href="http://www.rdocumentation.org/packages/mlr/functions/getCostSensRegrModels.html">getCostSensRegrModels</a>) exist
-for the other two approaches.</p>
-<pre class="prettyprint well"><code class="r">getCostSensWeightedPairsModels(mod)
+<a href="http://www.rdocumentation.org/packages/mlr/functions/getHomogeneousEnsembleModels.html">getHomogeneousEnsembleModels</a>.</p>
+<pre class="prettyprint well"><code class="r">getHomogeneousEnsembleModels(mod)
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [[1]]
