--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -262,10 +262,10 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;         task.id    learner.id mmce.test.mean
-#&gt; 1  iris-example   classif.lda        0.04000
-#&gt; 2  iris-example classif.rpart        0.06667
-#&gt; 3 Sonar-example   classif.lda        0.23577
-#&gt; 4 Sonar-example classif.rpart        0.26980
+#&gt; 1  iris-example   classif.lda     0.04000000
+#&gt; 2  iris-example classif.rpart     0.06666667
+#&gt; 3 Sonar-example   classif.lda     0.23577236
+#&gt; 4 Sonar-example classif.rpart     0.26980256
 </code></pre>
 
 <p>The above code should be self-explanatory. In the result every row corresponds to one <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>
@@ -284,38 +284,38 @@ getBMRPerformances(res)
 
 <pre class="prettyprint well"><code>#&gt; $`iris-example`
 #&gt; $`iris-example`$classif.lda
-#&gt;   iter    mmce
-#&gt; 1    1 0.03333
-#&gt; 2    2 0.00000
-#&gt; 3    3 0.00000
-#&gt; 4    4 0.00000
-#&gt; 5    5 0.16667
+#&gt;   iter       mmce
+#&gt; 1    1 0.03333333
+#&gt; 2    2 0.00000000
+#&gt; 3    3 0.00000000
+#&gt; 4    4 0.00000000
+#&gt; 5    5 0.16666667
 #&gt; 
 #&gt; $`iris-example`$classif.rpart
-#&gt;   iter    mmce
-#&gt; 1    1 0.06667
-#&gt; 2    2 0.06667
-#&gt; 3    3 0.00000
-#&gt; 4    4 0.03333
-#&gt; 5    5 0.16667
+#&gt;   iter       mmce
+#&gt; 1    1 0.06666667
+#&gt; 2    2 0.06666667
+#&gt; 3    3 0.00000000
+#&gt; 4    4 0.03333333
+#&gt; 5    5 0.16666667
 #&gt; 
 #&gt; 
 #&gt; $`Sonar-example`
 #&gt; $`Sonar-example`$classif.lda
-#&gt;   iter   mmce
-#&gt; 1    1 0.2619
-#&gt; 2    2 0.1905
-#&gt; 3    3 0.2143
-#&gt; 4    4 0.2195
-#&gt; 5    5 0.2927
+#&gt;   iter      mmce
+#&gt; 1    1 0.2619048
+#&gt; 2    2 0.1904762
+#&gt; 3    3 0.2142857
+#&gt; 4    4 0.2195122
+#&gt; 5    5 0.2926829
 #&gt; 
 #&gt; $`Sonar-example`$classif.rpart
-#&gt;   iter   mmce
-#&gt; 1    1 0.2857
-#&gt; 2    2 0.1905
-#&gt; 3    3 0.2143
-#&gt; 4    4 0.2927
-#&gt; 5    5 0.3659
+#&gt;   iter      mmce
+#&gt; 1    1 0.2857143
+#&gt; 2    2 0.1904762
+#&gt; 3    3 0.2142857
+#&gt; 4    4 0.2926829
+#&gt; 5    5 0.3658537
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Aggregated performances
@@ -329,17 +329,17 @@ getBMRAggrPerformances(res)
 #&gt; 
 #&gt; $`iris-example`$classif.rpart
 #&gt; mmce.test.mean 
-#&gt;        0.06667 
+#&gt;     0.06666667 
 #&gt; 
 #&gt; 
 #&gt; $`Sonar-example`
 #&gt; $`Sonar-example`$classif.lda
 #&gt; mmce.test.mean 
-#&gt;         0.2358 
+#&gt;      0.2357724 
 #&gt; 
 #&gt; $`Sonar-example`$classif.rpart
 #&gt; mmce.test.mean 
-#&gt;         0.2698
+#&gt;      0.2698026
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Predictions
@@ -455,7 +455,7 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;        task.id         learner.id acc.test.mean
-#&gt; 1 iris-example classif.kknn.tuned        0.9157
+#&gt; 1 iris-example classif.kknn.tuned     0.9156964
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## What parameter setting achieved this performances?
@@ -496,12 +496,12 @@ getBMRPerformances(res)
 
 <pre class="prettyprint well"><code>#&gt; $`iris-example`
 #&gt; $`iris-example`$classif.kknn.tuned
-#&gt;   iter    acc
-#&gt; 1    1 0.9074
-#&gt; 2    2 0.9630
-#&gt; 3    3 0.9000
-#&gt; 4    4 0.9153
-#&gt; 5    5 0.8929
+#&gt;   iter       acc
+#&gt; 1    1 0.9074074
+#&gt; 2    2 0.9629630
+#&gt; 3    3 0.9000000
+#&gt; 4    4 0.9152542
+#&gt; 5    5 0.8928571
 </code></pre>
 
 <p>Of course everything works the same way if we change the resampling
@@ -536,12 +536,12 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;         task.id         learner.id mmce.test.mean
-#&gt; 1  iris-example        classif.lda        0.02000
-#&gt; 2  iris-example      classif.rpart        0.07333
-#&gt; 3  iris-example classif.ksvm.tuned        0.04000
-#&gt; 4 Sonar-example        classif.lda        0.25494
-#&gt; 5 Sonar-example      classif.rpart        0.33113
-#&gt; 6 Sonar-example classif.ksvm.tuned        0.50918
+#&gt; 1  iris-example        classif.lda     0.02000000
+#&gt; 2  iris-example      classif.rpart     0.07333333
+#&gt; 3  iris-example classif.ksvm.tuned     0.04000000
+#&gt; 4 Sonar-example        classif.lda     0.25493612
+#&gt; 5 Sonar-example      classif.rpart     0.33112660
+#&gt; 6 Sonar-example classif.ksvm.tuned     0.50917538
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Performance values in individual runs
@@ -550,54 +550,54 @@ getBMRPerformances(res)
 
 <pre class="prettyprint well"><code>#&gt; $`iris-example`
 #&gt; $`iris-example`$classif.lda
-#&gt;   iter    mmce
-#&gt; 1    1 0.00000
-#&gt; 2    2 0.03333
-#&gt; 3    3 0.06667
-#&gt; 4    4 0.00000
-#&gt; 5    5 0.00000
+#&gt;   iter       mmce
+#&gt; 1    1 0.00000000
+#&gt; 2    2 0.03333333
+#&gt; 3    3 0.06666667
+#&gt; 4    4 0.00000000
+#&gt; 5    5 0.00000000
 #&gt; 
 #&gt; $`iris-example`$classif.rpart
-#&gt;   iter    mmce
-#&gt; 1    1 0.13333
-#&gt; 2    2 0.06667
-#&gt; 3    3 0.06667
-#&gt; 4    4 0.06667
-#&gt; 5    5 0.03333
+#&gt;   iter       mmce
+#&gt; 1    1 0.13333333
+#&gt; 2    2 0.06666667
+#&gt; 3    3 0.06666667
+#&gt; 4    4 0.06666667
+#&gt; 5    5 0.03333333
 #&gt; 
 #&gt; $`iris-example`$classif.ksvm.tuned
-#&gt;   iter    mmce
-#&gt; 1    1 0.03333
-#&gt; 2    2 0.06667
-#&gt; 3    3 0.03333
-#&gt; 4    4 0.06667
-#&gt; 5    5 0.00000
+#&gt;   iter       mmce
+#&gt; 1    1 0.03333333
+#&gt; 2    2 0.06666667
+#&gt; 3    3 0.03333333
+#&gt; 4    4 0.06666667
+#&gt; 5    5 0.00000000
 #&gt; 
 #&gt; 
 #&gt; $`Sonar-example`
 #&gt; $`Sonar-example`$classif.lda
-#&gt;   iter   mmce
-#&gt; 1    1 0.2381
-#&gt; 2    2 0.2439
-#&gt; 3    3 0.2857
-#&gt; 4    4 0.2927
-#&gt; 5    5 0.2143
+#&gt;   iter      mmce
+#&gt; 1    1 0.2380952
+#&gt; 2    2 0.2439024
+#&gt; 3    3 0.2857143
+#&gt; 4    4 0.2926829
+#&gt; 5    5 0.2142857
 #&gt; 
 #&gt; $`Sonar-example`$classif.rpart
-#&gt;   iter   mmce
-#&gt; 1    1 0.3810
-#&gt; 2    2 0.2439
-#&gt; 3    3 0.4524
-#&gt; 4    4 0.2927
-#&gt; 5    5 0.2857
+#&gt;   iter      mmce
+#&gt; 1    1 0.3809524
+#&gt; 2    2 0.2439024
+#&gt; 3    3 0.4523810
+#&gt; 4    4 0.2926829
+#&gt; 5    5 0.2857143
 #&gt; 
 #&gt; $`Sonar-example`$classif.ksvm.tuned
-#&gt;   iter   mmce
-#&gt; 1    1 0.4286
-#&gt; 2    2 0.3415
-#&gt; 3    3 0.6429
-#&gt; 4    4 0.5854
-#&gt; 5    5 0.5476
+#&gt;   iter      mmce
+#&gt; 1    1 0.4285714
+#&gt; 2    2 0.3414634
+#&gt; 3    3 0.6428571
+#&gt; 4    4 0.5853659
+#&gt; 5    5 0.5476190
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Tuned parameter for SVM
@@ -698,8 +698,8 @@ res
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;        task.id          learner.id mmce.test.mean
-#&gt; 1 iris-example       classif.rpart        0.06667
-#&gt; 2 iris-example classif.lda.featsel        0.04667
+#&gt; 1 iris-example       classif.rpart     0.06666667
+#&gt; 2 iris-example classif.lda.featsel     0.04666667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Which features have been selected (in the outer resampling steps)?
