--- a/tutorial/html/preproc/index.html
+++ b/tutorial/html/preproc/index.html
@@ -363,7 +363,7 @@ lrn
 #&gt; Hyperparameters: size=3,trace=FALSE,decay=0.01
 </code></pre>
 
-<p>Let's compare the cross-validated mean squared error (<a href="http://www.rdocumentation.org/packages/mlr/functions/measures.html">mse</a>) on the
+<p>Let's compare the cross-validated mean squared error (<a href="../measures/index.html">mse</a>) on the
 <a href="http://www.rdocumentation.org/packages/mlbench/functions/BostonHousing.html">Boston Housing data set</a> with and without scaling.</p>
 <pre class="prettyprint well"><code class="r">rdesc = makeResampleDesc(&quot;CV&quot;, iters = 10)
 
@@ -372,7 +372,7 @@ r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; mse.test.mean 
-#&gt;      21.35203
+#&gt;         19.36
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">lrn = makeLearner(&quot;regr.nnet&quot;, trace = FALSE, decay = 1e-02)
@@ -381,7 +381,7 @@ r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; mse.test.mean 
-#&gt;      52.37755
+#&gt;         53.16
 </code></pre>
 
 </div>
