--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -274,7 +274,7 @@ Generally, in <em>K-fold cross-validation</em> the data set <em>D</em> is partit
 In the <em>i</em>-th step of the <em>K</em> iterations, the <em>i</em>-th subset is
 used for testing, while the union of the remaining parts forms the training
 set.
-The default performance measure in survival analysis is the concordance index (<a href="http://www.rdocumentation.org/packages/mlr/functions/cindex.html">cindex</a>).</p>
+The default performance measure in survival analysis is the concordance index (<a href="../measures/index.html">cindex</a>).</p>
 <pre class="prettyprint well"><code class="r">## Specify the resampling strategy (3-fold cross-validation)
 rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 
@@ -302,7 +302,7 @@ r = resample(&quot;surv.coxph&quot;, lung.task, rdesc)
 <p><code>r$measures.test</code> gives the value of the performance measure on the 3 individual test
 data sets.
 <code>r$aggr</code> shows the aggregated performance value.
-Its name, <code>"cindex.test.mean"</code>, indicates the performance measure, <a href="http://www.rdocumentation.org/packages/mlr/functions/cindex.html">cindex</a>, and the method used
+Its name, <code>"cindex.test.mean"</code>, indicates the performance measure, <a href="../measures/index.html">cindex</a>, and the method used
 to aggregate the 3 individual performances.
 <a href="http://www.rdocumentation.org/packages/mlr/functions/aggregations.html">test.mean</a> is the default method and, as the name implies, takes the mean over the
 performances on the 3 test data sets.
@@ -318,23 +318,23 @@ variable.</p>
 <pre class="prettyprint well"><code class="r">head(r$pred$data)
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt;    id truth.time truth.event   response iter  set
-#&gt; 2   1        455        TRUE -0.4951788    1 test
-#&gt; 4   2        210        TRUE  0.9573824    1 test
-#&gt; 7   4        310        TRUE  0.8069059    1 test
-#&gt; 17 10        613        TRUE  0.1918188    1 test
-#&gt; 19 12         61        TRUE  0.6638736    1 test
-#&gt; 22 14         81        TRUE -0.1873917    1 test
+<pre class="prettyprint well"><code>#&gt;    id truth.time truth.event response iter  set
+#&gt; 2   1        455        TRUE  -0.4952    1 test
+#&gt; 4   2        210        TRUE   0.9574    1 test
+#&gt; 7   4        310        TRUE   0.8069    1 test
+#&gt; 17 10        613        TRUE   0.1918    1 test
+#&gt; 19 12         61        TRUE   0.6639    1 test
+#&gt; 22 14         81        TRUE  -0.1874    1 test
 </code></pre>
 
 <p>The columns <code>iter</code> and <code>set</code>indicate the resampling iteration and
 if an individual prediction was made on the test or the training data set.</p>
-<p>In the above example the performance measure is the concordance index (<a href="http://www.rdocumentation.org/packages/mlr/functions/cindex.html">cindex</a>).
+<p>In the above example the performance measure is the concordance index (<a href="../measures/index.html">cindex</a>).
 Of course, it is  possible to compute multiple performance measures at once by
 passing a list of measures
 (see also the previous section on <a href="../performance/index.html">evaluating learner performance</a>).</p>
-<p>In the following we estimate the Dunn index (<a href="http://www.rdocumentation.org/packages/mlr/functions/dunn.html">dunn</a>), the Davies-Bouldin cluster
-separation measure (<a href="http://www.rdocumentation.org/packages/mlr/functions/db.html">db</a>), and the time for training the learner (<a href="http://www.rdocumentation.org/packages/mlr/functions/timetrain.html">timetrain</a>)
+<p>In the following we estimate the Dunn index (<a href="../measures/index.html">dunn</a>), the Davies-Bouldin cluster
+separation measure (<a href="../measures/index.html">db</a>), and the time for training the learner (<a href="../measures/index.html">timetrain</a>)
 by <em>subsampling</em> with 5 iterations.
 In each iteration the data set <em>D</em> is randomly partitioned into a
 training and a test set according to a given percentage, e.g., 2/3
@@ -354,68 +354,38 @@ r = resample(&quot;cluster.XMeans&quot;, mtcars.task, rdesc, measures = list(dun
 #&gt; [Resample] subsampling iter: 3
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to max; returning -Inf
+#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to max; returning -Inf
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [Resample] subsampling iter: 4
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
+<pre class="prettyprint well"><code>#&gt; Warning: no non-missing arguments to max; returning -Inf
+#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to max; returning -Inf
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [Resample] subsampling iter: 5
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
+<pre class="prettyprint well"><code>#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to max; returning -Inf
+#&gt; Warning: no non-missing arguments to min; returning Inf
+#&gt; Warning: no non-missing arguments to max; returning -Inf
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt; Warning in max(distance[c1, c1]): no non-missing arguments to max;
-#&gt; returning -Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in min(distance[c1, c2]): no non-missing arguments to min;
-#&gt; returning Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; Warning in max(R[i, ][is.finite(R[i, ])]): no non-missing arguments to
-#&gt; max; returning -Inf
-</code></pre>
-
-<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.0612
+<pre class="prettyprint well"><code>#&gt; [Resample] Result: dunn.test.mean=0.958,db.test.mean=0.425,timetrain.test.mean=0.0892
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;      dunn.test.mean        db.test.mean timetrain.test.mean 
-#&gt;           0.9576313           0.4253807           0.0612000
+#&gt;              0.9576              0.4254              0.0892
 </code></pre>
 
 <h2 id="stratified-resampling">Stratified resampling</h2>
@@ -438,7 +408,7 @@ r = resample(&quot;classif.lda&quot;, iris.task, rdesc)
 
 <h2 id="accessing-individual-learner-models">Accessing individual learner models</h2>
 <p>In each resampling iteration a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> is fitted on the respective training set.
-By default, the resulting <a href="http://www.rdocumentation.org/packages/mlr/functions/makeWrappedModel.html">makeWrappedModel</a>s are not returned by <a href="http://www.rdocumentation.org/packages/mlr/functions/resample.html">resample</a>.
+By default, the resulting <a href="http://www.rdocumentation.org/packages/mlr/functions/makeWrappedModel.html">WrappedModel</a>s are not returned by <a href="http://www.rdocumentation.org/packages/mlr/functions/resample.html">resample</a>.
 If you want to keep them, set <code>models = TRUE</code> when calling <a href="http://www.rdocumentation.org/packages/mlr/functions/resample.html">resample</a>.</p>
 <pre class="prettyprint well"><code class="r">## 3-fold cross-validation
 rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
@@ -496,22 +466,22 @@ r = resample(&quot;regr.rpart&quot;, bh.task, rdesc,
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; [[1]]
-#&gt;      lstat         rm        nox        age       crim      indus 
-#&gt; 15632.0452 11547.1441  9089.6005  7550.8703  7354.7545  7125.5388 
-#&gt;        tax        dis        rad    ptratio         zn 
-#&gt;  2232.4655  2014.4190  1283.4597  1073.0603   117.2866 
+#&gt;   lstat      rm     nox     age    crim   indus     tax     dis     rad 
+#&gt; 15632.0 11547.1  9089.6  7550.9  7354.8  7125.5  2232.5  2014.4  1283.5 
+#&gt; ptratio      zn 
+#&gt;  1073.1   117.3 
 #&gt; 
 #&gt; [[2]]
-#&gt;       lstat          rm         nox       indus         dis        crim 
-#&gt; 18683.63849  9153.95640  3245.18155  3136.50997  2956.09528  2879.65454 
-#&gt;         age         tax     ptratio          zn         rad           b 
-#&gt;  2831.96128  2576.19701  1784.04552  1358.83558   656.07350    50.40518 
+#&gt;    lstat       rm      nox    indus      dis     crim      age      tax 
+#&gt; 18683.64  9153.96  3245.18  3136.51  2956.10  2879.65  2831.96  2576.20 
+#&gt;  ptratio       zn      rad        b 
+#&gt;  1784.05  1358.84   656.07    50.41 
 #&gt; 
 #&gt; [[3]]
-#&gt;         rm      lstat      indus        nox        dis        age 
-#&gt; 17652.2795 12488.9875  4966.9382  3488.1809  3441.5938  3334.1037 
-#&gt;       crim    ptratio        tax         zn        rad          b 
-#&gt;  3207.0757  2834.8339  2612.5557  1820.9145   520.3700   307.2145
+#&gt;      rm   lstat   indus     nox     dis     age    crim ptratio     tax 
+#&gt; 17652.3 12489.0  4966.9  3488.2  3441.6  3334.1  3207.1  2834.8  2612.6 
+#&gt;      zn     rad       b 
+#&gt;  1820.9   520.4   307.2
 </code></pre>
 
 <h2 id="resample-descriptions-and-resample-instances">Resample descriptions and resample instances</h2>
@@ -683,11 +653,11 @@ r = resample(&quot;classif.rpart&quot;, iris.task, rdesc, measures = list(mmce, 
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; mmce.test.mean   mmce.test.sd 
-#&gt;     0.06000000     0.03464102
+#&gt;        0.06000        0.03464
 </code></pre>
 
 <h3 id="example-calculating-the-training-error">Example: Calculating the training error</h3>
-<p>Here we calculate the mean misclassification error (<a href="http://www.rdocumentation.org/packages/mlr/functions/mmce.html">mmce</a>) on the training and the test
+<p>Here we calculate the mean misclassification error (<a href="../measures/index.html">mmce</a>) on the training and the test
 data sets. Note that we have to set <code>predict = "both"</code>when calling <a href="http://www.rdocumentation.org/packages/mlr/functions/makeResampleDesc.html">makeResampleDesc</a>
 in order to get predictions on both data sets, training and test.</p>
 <pre class="prettyprint well"><code class="r">mmce.train.mean = setAggregation(mmce, train.mean)
@@ -714,7 +684,7 @@ r = resample(&quot;classif.rpart&quot;, iris.task, rdesc, measures = list(mmce, 
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;  mmce.test.mean mmce.train.mean 
-#&gt;      0.06000000      0.03333333
+#&gt;         0.06000         0.03333
 </code></pre>
 
 <h3 id="example-bootstrap">Example: Bootstrap</h3>
@@ -751,20 +721,20 @@ b632.mmce
 head(r$measures.train)
 </code></pre>
 
-<pre class="prettyprint well"><code>#&gt;   iter       mmce       mmce       mmce
-#&gt; 1    1 0.04000000 0.04000000 0.04000000
-#&gt; 2    2 0.02666667 0.02666667 0.02666667
-#&gt; 3    3 0.02666667 0.02666667 0.02666667
-#&gt; 4    4 0.04000000 0.04000000 0.04000000
-#&gt; 5    5 0.02666667 0.02666667 0.02666667
-#&gt; 6    6 0.02666667 0.02666667 0.02666667
+<pre class="prettyprint well"><code>#&gt;   iter    mmce    mmce    mmce
+#&gt; 1    1 0.04000 0.04000 0.04000
+#&gt; 2    2 0.02667 0.02667 0.02667
+#&gt; 3    3 0.02667 0.02667 0.02667
+#&gt; 4    4 0.04000 0.04000 0.04000
+#&gt; 5    5 0.02667 0.02667 0.02667
+#&gt; 6    6 0.02667 0.02667 0.02667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt; mmce.test.mean      mmce.b632  mmce.b632plus 
-#&gt;     0.04856817     0.04148975     0.04203781
+#&gt;        0.04857        0.04149        0.04204
 </code></pre>
 
 <h2 id="convenience-functions">Convenience functions</h2>
