--- a/tutorial/html/create_imputation/index.html
+++ b/tutorial/html/create_imputation/index.html
@@ -253,7 +253,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     makeImputeMethod(learn = function(data, target, col) mean(data[[col]], 
 #&gt;         na.rm = TRUE), impute = simpleImpute)
 #&gt; }
-#&gt; &lt;bytecode: 0x1179c72a8&gt;
+#&gt; &lt;bytecode: 0x7f8387dd4640&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
@@ -271,7 +271,7 @@ The <em>learn</em> and <em>impute</em> functions both have at least the followin
 #&gt;     }
 #&gt;     replace(x, is.na(x), const)
 #&gt; }
-#&gt; &lt;bytecode: 0x1167be390&gt;
+#&gt; &lt;bytecode: 0x7f8387f5cb40&gt;
 #&gt; &lt;environment: namespace:mlr&gt;
 </code></pre>
 
