--- a/tutorial/html/wrapper/index.html
+++ b/tutorial/html/wrapper/index.html
@@ -309,8 +309,8 @@ We can use this newly constructed learner like all base learners, i.e. we can us
 </code></pre>
 
 <pre class="prettyprint well"><code>#&gt;   task.id           learner.id mmce.test.mean
-#&gt; 1    iris        classif.rpart        0.06667
-#&gt; 2    iris classif.rpart.bagged        0.06000
+#&gt; 1    iris        classif.rpart     0.06666667
+#&gt; 2    iris classif.rpart.bagged     0.06000000
 </code></pre>
 
 <p>That far we are quite happy with our new learner.
